@@ -609,16 +609,17 @@ specifier|final
 name|DistributedQueue
 name|workQueue
 decl_stmt|;
-DECL|field|isClosed
-specifier|private
-specifier|volatile
-name|boolean
-name|isClosed
-decl_stmt|;
 DECL|field|clusterProps
 specifier|private
 name|Map
 name|clusterProps
+decl_stmt|;
+DECL|field|isClosed
+specifier|private
+name|boolean
+name|isClosed
+init|=
+literal|false
 decl_stmt|;
 DECL|method|ClusterStateUpdater
 specifier|public
@@ -7121,10 +7122,15 @@ implements|implements
 name|ClosableThread
 block|{
 DECL|field|isClosed
-specifier|private
+specifier|protected
 specifier|volatile
 name|boolean
 name|isClosed
+decl_stmt|;
+DECL|field|thread
+specifier|private
+name|ClosableThread
+name|thread
 decl_stmt|;
 DECL|method|OverseerThread
 specifier|public
@@ -7133,16 +7139,25 @@ parameter_list|(
 name|ThreadGroup
 name|tg
 parameter_list|,
-name|ClusterStateUpdater
-name|clusterStateUpdater
+name|ClosableThread
+name|thread
 parameter_list|)
 block|{
 name|super
 argument_list|(
 name|tg
 argument_list|,
-name|clusterStateUpdater
+operator|(
+name|Runnable
+operator|)
+name|thread
 argument_list|)
+expr_stmt|;
+name|this
+operator|.
+name|thread
+operator|=
+name|thread
 expr_stmt|;
 block|}
 DECL|method|OverseerThread
@@ -7152,21 +7167,30 @@ parameter_list|(
 name|ThreadGroup
 name|ccTg
 parameter_list|,
-name|OverseerCollectionProcessor
-name|overseerCollectionProcessor
+name|ClosableThread
+name|thread
 parameter_list|,
 name|String
-name|string
+name|name
 parameter_list|)
 block|{
 name|super
 argument_list|(
 name|ccTg
 argument_list|,
-name|overseerCollectionProcessor
+operator|(
+name|Runnable
+operator|)
+name|thread
 argument_list|,
-name|string
+name|name
 argument_list|)
+expr_stmt|;
+name|this
+operator|.
+name|thread
+operator|=
+name|thread
 expr_stmt|;
 block|}
 annotation|@
@@ -7177,6 +7201,11 @@ name|void
 name|close
 parameter_list|()
 block|{
+name|thread
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
 name|this
 operator|.
 name|isClosed
